--- a/Backend-E-attendance/package.json
+++ b/Backend-E-attendance/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "type": "module"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,6 @@
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.4"
   }
 }
